--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "daisyui": "^3.8.3",
     "next": "13.5.4",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
