--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "autoprefixer": "^10.4.16",
+    "bcrypt": "^5.1.1",
     "daisyui": "^3.8.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongodb": "^3.5.9",
-    "mongoose": "^7.5.3",
+    "mongoose": "^7.5.4",
     "next": "13.5.4",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
@@ -21,6 +25,7 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
