--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "daisyui": "^3.8.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,8 +24,9 @@
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
-    "tailwindcss": "^3.3.3"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
