--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "daisyui": "^3.8.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^3.5.9",
     "mongoose": "^7.5.4",
     "next": "13.5.4",
+    "next-cookies": "^2.0.3",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "react": "^18",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.18",
+    "@types/js-cookie": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
