--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "next-cookies": "^2.0.3",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
+    "quill": "^1.3.7",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
