--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "quill": "^1.3.7",
+    "quill-image-resize": "^3.0.9",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
