--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/quill": "^2.0.12",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
@@ -26,7 +27,7 @@
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "quill": "^1.3.7",
-    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
