--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "cdbreact": "^1.5.18",
     "daisyui": "^3.8.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -31,6 +32,7 @@
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3"
   },
