--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^3.5.9",
     "mongoose": "^7.5.4",
     "next": "13.5.4",
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.18",
     "@types/js-cookie": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
