--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/mongoose": "^5.11.97",
     "@types/quill": "^2.0.12",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "cdbreact": "^1.5.18",
     "daisyui": "^3.8.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
@@ -35,6 +40,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
