added a api that retrieves articles from the database and display them

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/mongoose": "^5.11.97",
+    "@types/next": "^9.0.0",
     "@types/quill": "^2.0.12",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
@@ -49,7 +50,7 @@
     "@types/js-cookie": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/jwt-decode": "^3.1.0",
-    "@types/node": "^20",
+    "@types/node": "^20.8.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
